--- a/Proyecto1Cambealo/Proyecto1Cambealo/Web.config
+++ b/Proyecto1Cambealo/Proyecto1Cambealo/Web.config
@@ -5,12 +5,12 @@
   -->
 <configuration>
   <configSections>
-    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=ROBERTO;Initial Catalog=Proyecto;Integrated Security=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <add name="ProyectoEntities" connectionString="metadata=res://*/Models.ModelProyecto.csdl|res://*/Models.ModelProyecto.ssdl|res://*/Models.ModelProyecto.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ROBERTO;initial catalog=Proyecto;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
